<resources>
    <string name="app_name">Rate The Gaff</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title">Rate The GAFF</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <!-- Strings related to registering -->
    <string name="empty_field">You Need to fill in all the requested fields </string>
    <string name="title_missing_information">Missing Information</string>
    <string name="welcome_message">Welcome To Rate The Gaff</string>
    <string name="title_password_error">Password Error</string>
    <string name="min_length">You Need To have  A MIN Length of 8 charters for your password</string>
    <string name="email_error_title">Error With Email</string>
    <string name="email_error_massage">Needs To Be A Student Email Address</string>
    <string name="registering_error_title">Registering Error</string>

    <!-- Strings related to overflow menu and tabs -->
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="tab_one">Create Review</string>
    <string name="tab_two">View Reviews</string>
    <string name="empty_view_review_label">There is no reviews in place</string>
    <string name="empty_create_review_label">Can`t make review</string>
    <string name="title_activity_about">About</string>
    <string name="error_title">Error</string>

    <!-- Strings related to createing a review -->
    <string name="prompt_address">Address </string>
    <string name="prompt_rental_agent">Rental Agent</string>
    <string name="prompt_rating">Rating </string>
    <string name="prompt_postcode">Postcode </string>
    <string name="prompt_bed_type">Single or Double Beds </string>
    <string name="prompt_heating">Gas/Oil </string>
    <string name="prompt_window_type">Single/Double Glazing Windows</string>
    <string name="prompt_additional">Additional Information</string>
    <string name="oil_radio_button">Oil</string>
    <string name="gas_radio_button">Gas</string>
    <string name="send_button">Send</string>



</resources>
