<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bmcp1.finalyearappratethegaff.LoginActivity"
    android:background="@drawable/background_image"
    tools:showIn="@layout/activity_login">


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/title"
            android:text="@string/title"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:textSize="50dp"
            android:textStyle="bold|italic"
            android:typeface="serif"
            android:layout_above="@+id/email"
            android:layout_alignParentEnd="true" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="89dp">









    </LinearLayout>
    <Button
        android:id="@+id/loginButton"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/mybutton"
        android:backgroundTint="#fffefe"
        android:allowUndo="false"
        android:drawableTint="#ffffff"
        android:textColor="#fefcfc"
        android:layout_marginStart="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        />

    <Button
        android:id="@+id/signUpButton"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_up"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="#fefcfc"
        android:background="@drawable/mybutton"
        android:backgroundTint="#ffffff"
        android:layout_marginStart="44dp"
        android:layout_alignTop="@+id/loginButton"
        android:layout_toEndOf="@+id/loginButton" />

    <EditText
    android:id="@+id/username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/prompt_username"
    android:inputType="text"
    android:maxLines="1"
    android:singleLine="true"
    android:textColor="#ffffff"
    android:textColorHighlight="#ffffff"
    android:textColorHint="#ffffff"
        android:contextClickable="true"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true">

    <requestFocus />

</EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorLink="#ffffff"
        android:textColorHint="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColor="#ffffff"
        android:clickable="true"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true" />

</RelativeLayout>
